# DeepPersona

./: .gitignore  CLAUDE.md  README.md  activate_hpc.sh  con_cloudbank.py  pyproject.toml  requirements-gepa.txt  requirements.txt
configs/: qwen25_7b.yaml  qwen25_7b_csqa.yaml
data/splits/: csqa_split_indices.json  gsm8k_split_indices.json
deeppersona/: __init__.py  bedrock_client.py  config.py  data.py  generate.py  gepa_adapter.py  gepa_program.py  judge.py  manifest.py  personas.py  scaffolding_stats.py  seeds.py  verifiers.py
docs/: proposal_one_pager.md  q1_experimental_design.md  q1_progress.md
examples/: run_gepa.py
memory/: MEMORY.md  project_benchmark_selection.md  reference_delta_slurm.md
scripts/: 01_baseline.py  02_select_persona.py  03_scaffolding.py  04_aggregate_scaffolding.py  05_gepa_optimize.py  06_gepa_eval.py  gepa.sbatch  gpu_healthcheck.py  scaffolding_cell.sbatch  submit_scaffolding.sh
