[project]
name = "deeppersona"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.5.1",
    "transformers>=4.46,<4.50",
    "datasets>=3.1,<4.0",
    "accelerate>=1.1,<2.0",
    "nnsight>=0.4,<0.5",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deeppersona"]
